--- a/index.html
+++ b/index.html
@@ -54,24 +54,16 @@
                             <ul class="main-menu justify-content-center">
                                 <li class="menu-list">
                                     <div class="menu-header">
-                                        <a href="" class="nav-link">
+                                        <a href="/index.html" class="nav-link">
                                             Home
                                         </a>
                                     </div>
                                 </li>
                                 <li class="menu-list">
-                                    <div class="menu-header dropdown">
+                                    <div class="menu-header">
                                         <a href="/view/product.html" class="nav-link">
-                                            Danh mục
+                                            Sản phẩm
                                         </a>
-                                        <span>
-                                            <i class="icon-dropdown fa-solid fa-angle-down"></i>
-                                        </span>
-                                        <div class="dropdown-content">
-                                            <p>Tên danh mục 1</p>
-                                            <p>Tên danh mục 2</p>
-                                            <p>Tên danh mục 3</p>
-                                        </div>
                                     </div>
                                 </li>
                                 <li class="menu-list">
@@ -97,11 +89,11 @@
                                 <i class="icon fa-solid fa-magnifying-glass"></i>
                             </a>
                             <a class="header-action-item" href="./view/cart.html">
-                                <button class="cart-btn bg-transparent" onclick="toggleSidebar()"><i
+                                <button class="cart-btn bg-transparent" onclick=""><i
                                         class="icon fas fa-shopping-cart"></i></button>
                                 <div class="cart-info" id="cart-info">
-                                    <span class="cart-item-count">0</span> items
-                                    <div class="cart-items-container" id="cart-items-container"></div>
+                                    <span class="cart-item-count"></span> 
+                                    
                                 </div>
                             </a>
                             <a class="header-action-item" href="">
