--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                                         <form action="" class="footer-newsletter-form d-flex align-items-center">
                                             <input class="footer-newsletter-input bg-transparent" type="email"
                                                 placeholder="Your e-mail">
-                                            <button class="footer-newsletter-btn newsletter-btn-white">SIGN UP</button>
+                                            <button class="footer-newsletter-btn newsletter-btn-white" href="/view/signUp.html">SIGN UP</button>
                                         </form>
                                     </div>
                                 </div>
