--- a/index.html
+++ b/index.html
@@ -35,11 +35,22 @@
                             <a class="mr-3" href="https://www.pinterest.com/"><i class="fa-brands fa-instagram"></i></a>
                         </div>
                         <div class="header-top-content d-flex justify-content-end">
-                            <a href="./view/signIn.html" class="login text-white">
-                                <i class="fa-solid fa-user"></i>
-                                <span id="loggedInUserName">Sign In</span>
-                            </a>
+                            <div class="user-profile">
+                                <a href="/view/signIn.html" class="login text-white">
+                                    <i id="user" class="fa-solid fa-user"></i>
+                                    <span id="loggedInUserName">Sign In</span>
+                                </a>
+                                <div class="popup" id="logoutPopup">
+                                    <a href="/view/profile.html">Profile</a>
+                                    <a href="#" onclick="signOutUser()">Logout</a>
+                                </div>
+                            </div>
                         </div>
+
+
+
+
+
                         <div class="currency-wrapper">
                         </div>
                     </div>
@@ -355,7 +366,8 @@
                                         <form action="" class="footer-newsletter-form d-flex align-items-center">
                                             <input class="footer-newsletter-input bg-transparent" type="email"
                                                 placeholder="Your e-mail">
-                                            <button class="footer-newsletter-btn newsletter-btn-white" href="/view/signUp.html">SIGN UP</button>
+                                            <button class="footer-newsletter-btn newsletter-btn-white"
+                                                href="/view/signUp.html">SIGN UP</button>
                                         </form>
                                     </div>
                                 </div>
@@ -446,12 +458,10 @@
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios@1.4.0/dist/axios.min.js"></script>
-    <script src="./controller/cartsidebar.js"></script>
+    <script src="/controller/SignInUsers.js"></script>
     <script src="./controller/slider.js"></script>
-    <script src="./model/Shoes.js"></script>
-    <script src="./model/CartItem.js"></script>
-    <!-- <script src="/controller/card.js"></script> -->
     <script src="./controller/main.js"></script>
+
 
 
 
@@ -467,22 +477,7 @@
             });
         });
     </script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            // Lấy giá trị của query parameter 'name' từ URL
-            const urlParams = new URLSearchParams(window.location.search);
-            const nameUser = urlParams.get('name');
 
-            // Hiển thị tên người dùng trong phần tử có ID "loggedInUserName"
-            let loggedInUserName = document.querySelector("#loggedInUserName");
-            const isLoggedIn = nameUser !== null && nameUser !== '';
-
-            if (isLoggedIn) {
-                loggedInUserName.innerHTML = nameUser;
-            }
-        });
-
-    </script>
 
 </body>
 
