--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./asset/img/icon.png" type="image/x-icon">
     <title>Shoes Shop</title>
-    <link rel="stylesheet" href="/asset/css/main.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
@@ -16,6 +16,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+    <link rel="stylesheet" href="/asset/css/main.css">
 </head>
 
 <body>
@@ -28,7 +33,7 @@
 
                     <div class="header-top-wrapper mx-auto d-flex">
                         <div class="header-top-socical mr-4">
-                            <a class="mr-3" href="https://www.facebook.com/Trumforestt"><i
+                            <a class="mr-3" href="https://www.facebook.com/ku.king.372/"><i
                                     class="fa-brands fa-facebook-f"></i></a>
                             <a class="mr-3" href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
                             <a class="mr-3" href="#"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -42,16 +47,10 @@
                                 </a>
                                 <div class="popup" id="logoutPopup">
                                     <a href="/view/profile.html">Profile</a>
+                                    <a href="">My Order</a>
                                     <a href="#" onclick="signOutUser()">Logout</a>
                                 </div>
                             </div>
-                        </div>
-
-
-
-
-
-                        <div class="currency-wrapper">
                         </div>
                     </div>
                 </div>
@@ -197,44 +196,138 @@
                     </div>
                 </div>
 
-                <div class="item">
-                    <div class="left content">
-                        <h1 class="nameProduct">Nike Air Max 97 Blue</h1>
-                        <p class="description">The midsole contains 20% more Boost for an amplified Boost feeling.</p>
-                    </div>
-
-                    <div class="bottomRight content">
-                        <a href="http://127.0.0.1:5500/view/detail.html?id=9">
-                            <i class="fas fa-shopping-cart cartBtn"></i>
-                        </a>
-                    </div>
-
-                    <div class="product">
-                        <img class="imgProduct" src="./asset/img/4.png" alt="">
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="left content">
-                        <h1 class="nameProduct">Nike SP Dunk</h1>
-                        <p class="description">The midsole contains 20% more Boost for an amplified Boost feeling.</p>
-                    </div>
-
-
-                    <div class="bottomRight content">
-                        <a href="http://127.0.0.1:5500/view/detail.html?id=2">
-                            <i class="fas fa-shopping-cart cartBtn"></i>
-                        </a>
-                    </div>
-
-                    <div class="product">
-                        <img class="imgProduct" src="./asset/img/5.png" alt="">
-                    </div>
-                </div>
             </div>
 
             <button class="prev functionBtn"><i class="fas fa-angle-left"></i></button>
             <button class="next functionBtn"><i class="fas fa-angle-right"></i></button>
+        </div>
+    </section>
+
+    <section class="product-hot">
+        <div class="producthot-content">
+            <div class="title titleservice">
+                <p style="color: coral;"> Hot Products</p>
+                <h2>Featured products that sell best in the store</h2>
+            </div>
+            <div class="product-slider">
+                <a class="text-slider" href="http://127.0.0.1:5500/view/detail.html?id=1">
+                    <div class="product-item">
+                        <div class="product-item">
+                            <div class="swiper swiper-slide">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide product-item-img">
+                                        <img src="https://shop.cyberlearn.vn/images/adidas-prophere.png">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="product-item-description">
+                                <h3 class="text-product">Adidas Prophere</h3>
+                                <p class="text-muted">350$</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </a>
+
+                <div class="product-item">
+                    <a class="text-slider" href="http://127.0.0.1:5500/view/detail.html?id=9">
+                        <div class="product-item">
+                            <div class="swiper swiper-slide">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide product-item-img">
+                                        <img src="https://shop.cyberlearn.vn/images/nike-adapt-bb.png">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="product-item-description">
+                                <h3 class="text-product">Nike Adapt BB</h3>
+                                <p class="text-muted">$630</p>
+                            </div>
+
+                        </div>
+                    </a>
+
+                </div>
+                <div class="product-item">
+                    <a class="text-slider" href="http://127.0.0.1:5500/view/detail.html?id=7">
+                        <div class="product-item">
+                            <div class="swiper swiper-slide">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide product-item-img">
+                                        <img src="https://shop.cyberlearn.vn/images/adidas-ultraboost-4.png">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="product-item-description">
+                                <h3 class="text-product">Adidas Ultraboost 4</h3>
+                                <p class="text-muted">450$</p>
+                            </div>
+
+                        </div>
+                    </a>
+
+                </div>
+                <div class="product-item">
+                    <a class="text-slider" href="http://127.0.0.1:5500/view/detail.html?id=11">
+                        <div class="product-item">
+                            <div class="swiper swiper-slide">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide product-item-img">
+                                        <img src="https://shop.cyberlearn.vn/images/nike-air-max-97-blue.png">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="product-item-description">
+                                <h3 class="text-product">Nike Air Max 97</h3>
+                                <p class="text-muted">$450</p>
+                            </div>
+
+                        </div>
+                    </a>
+
+                </div>
+                <div class="product-item">
+                    <a class="text-slider" href="http://127.0.0.1:5500/view/detail.html?id=11">
+                        <div class="product-item">
+                            <div class="swiper swiper-slide">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide product-item-img">
+                                        <img src="https://shop.cyberlearn.vn/images/nike-flyknit.png">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="product-item-description">
+                                <h3 class="text-product">Nike Flyknit</h3>
+                                <p class="text-muted">$350</p>
+                            </div>
+                        </div>
+                    </a>
+
+                </div>
+                <div class="product-item">
+                    <a class="text-slider" href="http://127.0.0.1:5500/view/detail.html?id=1">
+                        <div class="product-item">
+                            <div class="swiper swiper-slide">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide product-item-img">
+                                        <img src="https://shop.cyberlearn.vn/images/nike-sp-dunk.png">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="product-item-description">
+                                <h3 class="text-product">Nike SP Dunk</h3>
+                                <p class="text-muted">$450</p>
+                            </div>
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+        <div class="product-more mt-5">
+            <a href="/view/product.html">
+                <button class="site-btn">View All Product</button>
+            </a>
         </div>
     </section>
 
@@ -278,16 +371,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-    </section>
-    <section class="products">
-        <div class="container">
-            <div class="d-flex justify-content-center mt-5">
-                <h1 class="section-heading">
-                    Product Feature</h1>
-            </div>
-            <div class="row" id="shoesList"></div>
         </div>
 
     </section>
@@ -447,6 +530,15 @@
             <input type="text" id="user-input" placeholder="Nhập tin nhắn...">
         </div>
     </div>
+    <div id="popup-overlay" class="popup-overlay"></div>
+    <div id="popup-announcement" class="popup-announcement">
+        <span class="popup-announcement-close" onclick="closePopup()">&#10006;</span>
+        <div class="text-announcement">
+            <p style="text-align: center; margin-bottom: 0"><span style="color: #000000;">NEW</span></p>
+            <p style="text-align: center;"><span style="color: #000000;">ARRIVALS</span></p>
+        </div>
+        <a href="/view/product.html"><button class="shop-now-button">Shop Now</button></a>
+    </div>
 
 
 
@@ -457,15 +549,25 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
+
+    <script src=https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js%3E></script>
+
     <script src="https://unpkg.com/axios@1.4.0/dist/axios.min.js"></script>
     <script src="/controller/SignInUsers.js"></script>
     <script src="./controller/slider.js"></script>
     <script src="./controller/main.js"></script>
-
-
-
-
-
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script>
+        $('.product-slider').slick({
+            infinite: true,
+            slidesToShow: 5,
+            slidesToScroll: 1,
+            speed: 2000,
+            dots: true,
+            autoplay: true,
+            arrows: false
+        });
+    </script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             var searchIcon = document.getElementById('search-icon');
@@ -477,7 +579,23 @@
             });
         });
     </script>
+    <script>
+        function showPopup() {
+            var popup = document.getElementById("popup-announcement");
+            popup.style.display = "block";
+        }
+        function closePopup() {
+            var popupOverlay = document.getElementById("popup-overlay");
+            var popup = document.getElementById("popup-announcement");
+            popupOverlay.style.display = "none";
+            popup.style.display = "none";
+        }
 
+        // Gọi hàm kiểm tra popup khi trang web được tải
+        window.onload = function () {
+            showPopup();
+        };
+    </script>
 
 </body>
 
